src/test/compile-fail/block-must-not-have-result-while.rs
// error-pattern:this block must not have a result

fn main() {
    while true {
        true
    }
}